--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ body {
   font-weight: bold;
 }
 #header {
-  height: 300px;
+  height: 60px;
   position: relative;
   border-bottom: 1px solid #ddd;
 }
@@ -341,6 +341,7 @@ body {
 #header-inner {
   position: relative;
   overflow: hidden;
+  z-index: 10;
 }
 #banner {
   position: absolute;
@@ -348,7 +349,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("images/banner.jpg") center #000;
+  background: url("images/banner-min.png") center #000;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
